[gd_scene load_steps=15 format=2]

[ext_resource path="res://main_page.gd" type="Script" id=1]
[ext_resource path="res://vcrosdmonorusbyd.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 2 )

[node name="main_page" type="Node2D"]
script = ExtResource( 1 )

[node name="http" type="Node2D" parent="."]

[node name="httpReq" type="HTTPRequest" parent="http"]

[node name="tokenHttp" type="HTTPRequest" parent="http"]

[node name="fg" type="CanvasLayer" parent="."]

[node name="left" type="Control" parent="fg"]

[node name="url_label" type="Label" parent="fg/left"]
margin_top = 1.0
margin_right = 385.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "URL:"

[node name="url" type="TextEdit" parent="fg/left"]
margin_top = 41.0
margin_right = 387.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 3 )
text = "https://www.youtube.com/watch?v=4zusy4IH-8U"

[node name="console_label" type="Label" parent="fg/left"]
margin_top = 407.0
margin_right = 105.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 3 )
text = "Console(output):"

[node name="console" type="TextEdit" parent="fg/left"]
margin_top = 433.0
margin_right = 193.0
margin_bottom = 559.0
rect_pivot_offset = Vector2( -533, 0 )
custom_fonts/font = SubResource( 3 )

[node name="token_console" type="TextEdit" parent="fg/left"]
margin_left = 193.0
margin_top = 433.0
margin_right = 386.0
margin_bottom = 559.0
rect_pivot_offset = Vector2( -533, 0 )
custom_fonts/font = SubResource( 9 )

[node name="auth_label" type="Label" parent="fg/left"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 114.0
margin_right = 385.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
text = "AUTH TOKEN"

[node name="auth_token" type="TextEdit" parent="fg/left"]
margin_top = 145.0
margin_right = 192.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 3 )

[node name="init_comment_label" type="Label" parent="fg/left"]
margin_top = 197.0
margin_right = 40.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 3 )
text = "INITIAL COMMENT"

[node name="init_comment" type="TextEdit" parent="fg/left"]
margin_top = 236.0
margin_right = 387.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 1 )
text = "Этот коммент был создан АПИШКОЙ."

[node name="changed_comment_label" type="Label" parent="fg/left"]
margin_top = 285.0
margin_right = 40.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 3 )
text = "CHANGED COMMENT"

[node name="changed_comment" type="TextEdit" parent="fg/left"]
margin_top = 315.0
margin_right = 387.0
margin_bottom = 355.0
custom_fonts/font = SubResource( 2 )
text = "Этот коммент был изменен АПИШКОЙ."

[node name="code" type="TextEdit" parent="fg/left"]
margin_left = 193.0
margin_top = 145.0
margin_right = 385.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 10 )

[node name="code_label" type="Label" parent="fg/left"]
margin_left = 193.0
margin_top = 197.0
margin_right = 373.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 3 )
text = "CODE"

[node name="right" type="Control" parent="fg"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 6.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = -298.0

[node name="get_video_info" type="Button" parent="fg/right"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_right = -10.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 3 )
text = "GET VIDEO
 INFO"

[node name="comment_it" type="Button" parent="fg/right"]
margin_left = -128.0
margin_top = 84.0
margin_right = -10.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "COMMENT
 IT"

[node name="change_comment" type="Button" parent="fg/right"]
margin_left = -128.0
margin_top = 171.0
margin_right = -10.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 3 )
text = "CHANGE
COMMENT"

[node name="comment_id_label" type="Label" parent="fg/right"]
margin_left = -128.0
margin_top = 274.0
margin_right = -8.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 75, 9 )
custom_fonts/font = SubResource( 3 )
text = "COMMENT ID"

[node name="comment_id" type="TextEdit" parent="fg/right"]
margin_left = -128.0
margin_top = 297.0
margin_right = -10.0
margin_bottom = 363.0
custom_fonts/font = SubResource( 3 )

[node name="api_scope" type="Label" parent="fg/right"]
margin_left = -128.0
margin_top = 527.0
margin_right = -8.0
margin_bottom = 543.0
rect_pivot_offset = Vector2( 75, 9 )
custom_fonts/font = SubResource( 3 )
text = "SCOPE:"

[node name="scope" type="TextEdit" parent="fg/right"]
margin_left = -128.0
margin_top = 555.0
margin_right = -8.0
margin_bottom = 595.0
text = "https://www.googleapis.com/auth/youtube.force-ssl"

[node name="oautgh_label" type="Label" parent="fg/right"]
margin_left = -128.0
margin_top = 405.0
margin_right = -8.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 75, 9 )
custom_fonts/font = SubResource( 3 )
text = "OAuth:"

[node name="oauth" type="TextEdit" parent="fg/right"]
margin_left = -128.0
margin_top = 467.0
margin_right = -8.0
margin_bottom = 507.0
text = "https://developers.google.com/oauthplayground/"

[node name="check_video" type="Button" parent="fg/right"]
margin_left = -256.0
margin_right = -128.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 4 )
text = "CHECK
VIDEO"

[node name="video_time_left" type="Label" parent="fg/right"]
margin_right = 40.0
margin_bottom = 14.0

[node name="add_to_array" type="Button" parent="fg/right"]
margin_left = -256.0
margin_top = 84.0
margin_right = -128.0
margin_bottom = 143.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/icon_color_normal = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "ADD TO
ARRAY"

[node name="array_label" type="Label" parent="fg/right"]
margin_left = -256.0
margin_top = 274.0
margin_right = -204.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 6 )
text = "VIDEOS:"

[node name="videos_array" type="TextEdit" parent="fg/right"]
margin_left = -256.0
margin_top = 297.0
margin_right = -128.0
margin_bottom = 363.0
custom_fonts/font = SubResource( 7 )

[node name="start" type="Button" parent="fg/right"]
margin_left = -256.0
margin_top = 171.0
margin_right = -128.0
margin_bottom = 234.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "START"

[node name="registrate" type="TextEdit" parent="fg/right"]
margin_left = -256.0
margin_top = 467.0
margin_right = -127.0
margin_bottom = 507.0
text = "https://accounts.google.com/o/oauth2/v2/auth?client_id=389579844116-tr7g8o4hjvm39h6ar7u228f8a6f4ntug.apps.googleusercontent.com&redirect_uri=http://localhost&response_type=code&acces_type=offline&scope=https://www.googleapis.com/auth/youtube.force-ssl"

[node name="reg" type="Label" parent="fg/right"]
margin_left = -256.0
margin_top = 404.0
margin_right = -136.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 75, 9 )
custom_fonts/font = SubResource( 11 )
text = "Registrate:"

[node name="token_start" type="Button" parent="fg/right"]
margin_left = -376.0
margin_right = -256.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 1, 0.996078, 1 )
custom_fonts/font = SubResource( 12 )
text = "GET TOKEN"
__meta__ = {
"_edit_lock_": true
}

[node name="misc" type="Node" parent="."]

[node name="auth_token_timer" type="Timer" parent="misc"]
one_shot = true

[node name="video_timer" type="Timer" parent="misc"]
one_shot = true

[connection signal="request_completed" from="http/httpReq" to="." method="_on_httpReq_request_completed"]
[connection signal="request_completed" from="http/tokenHttp" to="." method="_on_tokenHttp_request_completed"]
[connection signal="text_changed" from="fg/left/auth_token" to="." method="_on_auth_token_text_changed"]
[connection signal="pressed" from="fg/right/get_video_info" to="." method="_on_check_url_pressed"]
[connection signal="pressed" from="fg/right/comment_it" to="." method="_on_comment_it_pressed"]
[connection signal="pressed" from="fg/right/change_comment" to="." method="_on_change_comment_pressed"]
[connection signal="text_changed" from="fg/right/scope" to="." method="_on_scope_text_changed"]
[connection signal="text_changed" from="fg/right/oauth" to="." method="_on_oauth_text_changed"]
[connection signal="pressed" from="fg/right/check_video" to="." method="_on_check_video_pressed"]
[connection signal="pressed" from="fg/right/add_to_array" to="." method="_on_add_to_array_pressed"]
[connection signal="text_changed" from="fg/right/videos_array" to="." method="_on_videos_array_text_changed"]
[connection signal="pressed" from="fg/right/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="fg/right/token_start" to="." method="_on_token_start_pressed"]
[connection signal="timeout" from="misc/auth_token_timer" to="." method="_on_auth_token_timer_timeout"]
[connection signal="timeout" from="misc/video_timer" to="." method="_on_video_timer_timeout"]
